[package]
name = "blobs"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "NOT-Soft body physics in 2D"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
hecs = "0.9.1"
bitflags = "1.3.2"
thunderdome = "0.6.0"
log = "0.4.17"

itertools = "0.10.5"
assert_approx_eq = "1.1.0"
tracy-client = "0.15.2"

qute-types = { path = "../qute-types" }
bvh-arena = "1.1.3"

[dev-dependencies]
# criterion = { version = "0.4", features = ["html_reports"] }
criterion = { version = "0.4" }
rand = "0.8"
rand_xorshift = "0.3"

[[bench]]
name = "spatial_hash"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
rayon = "1.6.1"
