[package]
name = "blobs"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "NOT-Soft body physics in 2D"

[features]
default = []
# default = ["use-grid"]
use-grid = []
tracy = ["tracy-client"]

[dependencies]
glam = { version = "0.24.1", features = ["approx"] }
bitflags = "1.3.2"
thunderdome = "0.6.0"
log = "0.4.17"
approx = "0.5.1"

itertools = "0.10.5"
assert_approx_eq = "1.1.0"
tracy-client = { version = "0.15.2", optional = true }

grids = "0.2.1"

bvh-arena = "1.1.3"
atomic_refcell = "0.1.10"
once_cell = "1.17.1"

[dev-dependencies]
# criterion = { version = "0.4", features = ["html_reports"] }
criterion = { version = "0.4" }
rand = "0.8"
rand_xorshift = "0.3"

[[bench]]
name = "spatial_hash"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
rayon = "1.6.1"
