[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["jemalloc"]
jemalloc = ["jemalloc-ctl", "jemallocator"]

[dependencies]
macroquad = "0.3.25"
glam = "0.23.0"
egui-macroquad = "0.15.0"
egui = "0.21.0"

blobs = { path = "../blobs" }

jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }
