[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[features]
default = []
jemalloc = ["jemalloc-ctl", "jemallocator"]
rapier = ["rapier2d"]
memory-stats = ["dep:memory-stats"]

[dependencies]
macroquad = "0.3.25"
glam = "0.23.0"
egui-macroquad = "0.15.0"
egui = "0.21.0"
hecs = "0.10.3"

memory-stats = { version = "1.1.0", optional = true }

rapier2d = { version = "0.17.2", optional = true }

blobs = { path = "../blobs" }

jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }
thunderdome = "0.6.0"

instant = "0.1"
grids = "0.1.3"
